# Ray-Tracing

./: CMakeLists.txt  README.md  clean.sh  main.cpp  run.sh
camera/: Camera.cpp  Camera.h
header files/: Camera.h  Color.h  HitRecord.h  HittableList.h  Lambertian.h  Ray.h  RayTracing.h  Sphere.h  Vec3.h
hittables/: HitRecord.cpp  HitRecord.h  HittableList.cpp  IHittable.h  Sphere.cpp  Sphere.h
hittables/material/: Lambertian.cpp  Lambertian.h  Material.h
include/: Camera.h  HitRecord.h  IHittable.h  Material.h  RayTracing.h  Sphere.h
rays/: Color.cpp  Color.h  RayTracing.cpp  RayTracing.h  Vec3.cpp  Vec3.h
source files/: Camera.cpp  Color.cpp  HitRecord.cpp  HittableList.cpp  Lambertian.cpp  Ray.cpp  RayTracing.cpp  Sphere.cpp  Vec3.cpp
src/: Camera.cpp  Color.cpp  HitRecord.cpp  HittableList.cpp  Lambertian.cpp  Ray.cpp  RayTracing.cpp  Sphere.cpp  Vec3.cpp  main.cpp
src/camera/: Camera.cpp  Camera.h
src/hittable/: HitRecord.cpp  HitRecord.h  HittableList.cpp  HittableList.h  IHittable.h  Sphere.cpp  Sphere.h
src/material/: Lambertian.cpp  Lambertian.h  Material.h
src/other/: RayTracing.cpp  RayTracing.h
src/ray/: Color.cpp  Color.h  Ray.cpp  Ray.h  Vec3.cpp  Vec3.h
